# libsdp

./: CMakeLists.txt  README.md  conanfile.txt
include/sdp/: sdp.hpp
src/: sdp.cpp
test/: test.cpp
